Fix footer dots getting stretched on mobile

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    font-size: var(--font-medium);
+    font-size: var(--font-small);
     color: var(--color-grey-light-1);
     background-color: var(--color-grey-dark-1);
     padding: 6%;
@@ -9,6 +9,7 @@
         
         &--first {
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             justify-content: center;
             padding-bottom: var(--spacing-large);
@@ -22,8 +23,8 @@
     }
 
     &__dot {
-        height: 25px;
-        width: 25px;
+        height: 2.5rem;
+        width: 2.5rem;
         border-radius: 50%;
         display: inline-block;
         margin: var(--spacing-medium);
@@ -42,7 +43,7 @@
     }
 
     &__contact-text {
-        margin-left: var(--spacing-large);
+        margin: 0 var(--spacing-large);
     }
 
     &__credit-text {
